--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>ShlinkedIn</title>
 </head>
 <body>
-    <h1>ShlinkedIn has migrated to <a href="https://www.shlinkedin.com">shlinkedin.com</a>. Thanks!</h1>
+    <h1>ShlinkedIn has migrated to <a href="https://www.shlinkedin.com">shlinkedin.com</a>. See you there!</h1>
 </body>
 </html>
